--- a/client/src/input.scss
+++ b/client/src/input.scss
@@ -241,7 +241,8 @@ body {
     color: rgb(228, 225, 225);
     border-radius: 10%;
     text-align: center;
-	box-shadow: 5px 5px 5px rgb(97, 96, 96)
+	box-shadow: 5px 5px 5px rgb(97, 96, 96);
+	min-height: 400px;
 }
 
 .page {
